Fixed spacing issue in mobile view

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -288,7 +288,7 @@
 /* Display the columns below each other instead of side by side on small screens */
 @media screen and (max-width: 650px) {
   .column {
-    width: 100%;
+    width: 97.5%;
     display: block;
   }
 }
